WebKitTestRunner: Credential cache is not cleared between tests https://bugs.webkit.org/show_bug.cgi?id=153407 <rdar://problem/24280834>

Reviewed by Brady Eidson.

Source/WebKit2:

Add SPI to call NetworkStorageSession::switchToNewTestingSession() to create a new testing session.
The new testing session will have an empty credential cache.

* NetworkProcess/NetworkProcess.cpp:
(WebKit::NetworkProcess::switchToNewTestingSession): Added.
* NetworkProcess/NetworkProcess.h:
* NetworkProcess/NetworkProcess.messages.in: Added message SwitchToNewTestingSession().
* UIProcess/API/C/WKContext.cpp:
(WKContextResetTestingNetworkSession): Added.
* UIProcess/API/C/WKContextPrivate.h:
* UIProcess/WebProcessPool.cpp:
(WebKit::WebProcessPool::resetTestingNetworkSession): Added.
* UIProcess/WebProcessPool.h:
* WebProcess/WebProcess.cpp:
(WebKit::WebProcess::switchToNewTestingSession): Added.
* WebProcess/WebProcess.h:
* WebProcess/WebProcess.messages.in: Added message SwitchToNewTestingSession().

Tools:

* WebKitTestRunner/TestController.cpp:
(WTR::TestController::resetStateToConsistentValues): Reset testing network session
to clear cached credentials.

Canonical link: https://commits.webkit.org/171502@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@195543 268f45cc-cd09-0410-ab3c-d52691b4dbfc