Source/WebKit2/UIProcess/API/C/WKContext.cpp
@@ -538,6 +538,11 @@ void WKContextUseTestingNetworkSession(WKContextRef context)
     toImpl(context)->useTestingNetworkSession();
 }
 
+void WKContextResetTestingNetworkSession(WKContextRef context)
+{
+    toImpl(context)->resetTestingNetworkSession();
+}
+
 WKDictionaryRef WKContextCopyPlugInAutoStartOriginHashes(WKContextRef contextRef)
 {
     return toAPI(toImpl(contextRef)->plugInAutoStartOriginHashes().leakRef());
