Tools/WebKitTestRunner/TestController.cpp
@@ -714,6 +714,8 @@ bool TestController::resetStateToConsistentValues()
 
     WKContextSetCacheModel(TestController::singleton().context(), kWKCacheModelDocumentBrowser);
 
+    WKContextClearCachedCredentials(TestController::singleton().context());
+
     // FIXME: This function should also ensure that there is only one page open.
 
     // Reset the EventSender for each test.
